--- a/src/LibLog.Tests/LibLog.Tests.csproj
+++ b/src/LibLog.Tests/LibLog.Tests.csproj
@@ -3,11 +3,15 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="LogProviders\LoupeLogProviderLoggingTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="..\LibLog\LibLog.cs" Link="LibLog.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="NLog" Version="5.0.0-beta11" />
+    <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="Shouldly" Version="2.8.3" />
     <PackageReference Include="xunit.core" Version="2.3.1" />
   </ItemGroup>
