--- a/src/LibLog.Tests/LibLog.Tests.csproj
+++ b/src/LibLog.Tests/LibLog.Tests.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>LibLog.Logging</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="LogProviders\LoupeLogProviderLoggingTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\LibLog\LibLog.cs" Link="LibLog.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Loupe.Agent.Core" Version="4.5.0.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="NLog" Version="5.0.0-beta11" />
     <PackageReference Include="Serilog" Version="2.5.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.Observable" Version="2.0.1" />
     <PackageReference Include="Shouldly" Version="2.8.3" />
+    <PackageReference Include="System.Reactive.Core" Version="3.1.1" />
     <PackageReference Include="xunit.core" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibLog\LibLog.csproj" />
