--- a/src/LibLog.Example.ColoredConsoleLogProvider/LibLog.Example.ColoredConsoleLogProvider.csproj
+++ b/src/LibLog.Example.ColoredConsoleLogProvider/LibLog.Example.ColoredConsoleLogProvider.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>LibLog.Example.ColouredConsoleLogProvider</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibLog.Example.Library\LibLog.Example.Library.csproj" />
