--- a/src/LibLog/LibLog.csproj
+++ b/src/LibLog/LibLog.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>
+      netstandard1.0;netstandard1.1;netstandard1.2;netstandard1.3;
+      netstandard1.4;netstandard1.5;netstandard1.6;
+      netcoreapp1.0;netcoreapp1.1;netstandard2.0;net45;net461
+      </TargetFrameworks>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.4.0" />
   </ItemGroup>
