--- a/src/LibLog/LibLog.csproj
+++ b/src/LibLog/LibLog.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>
-      netstandard1.0;netstandard1.1;netstandard1.2;netstandard1.3;
-      netstandard1.4;netstandard1.5;netstandard1.6;
-      netcoreapp1.0;netcoreapp1.1;netstandard2.0;net45;net461
+      netstandard1.0;netcoreapp1.0;netstandard2.0;net45;
       </TargetFrameworks>
   </PropertyGroup>
 
