Don't need these files

--- a/src/LibLog.Tests/app.config
+++ b/src/LibLog.Tests/app.config
@@ -16,7 +16,7 @@
   </configSections>
 
   <appSettings>
-    <add key="xunit.parallelizeAssembly" value="true"/>
+    <add key="xunit.parallelizeAssembly" value="false"/>
     <add key="xunit.methodDisplay" value="method"/>
   </appSettings>
   
